<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <TextView
        android:id="@+id/authTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/auth_title"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authTitle">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/authInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_input_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_input_gap" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/authInputLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_input_lastname" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_input_gap" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/authInputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auth_input_phone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_input_gap" />

        <Button
            android:id="@+id/authBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_btn_register" />

    </LinearLayout>

    <Button
        android:id="@+id/authorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/authorBtn"
        app:layout_constraintBottom_toTopOf="@+id/authorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/authorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:rotation="0"
        android:text="@string/author"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>