<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetPathActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/authorBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:id="@+id/setPathTitleFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/set_path_from"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/set_path_title_gap" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/setPathInputFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/set_path_input_from"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/set_path_textviews_gap" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/setPathInputTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/set_path_input_to"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/set_path_layout_gap" />

            <TextView
                android:id="@+id/setPathTitleTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/set_path_details"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/set_path_title_gap" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/setPathInputDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/set_path_input_date"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/set_path_textviews_gap" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/setPathInputTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/set_path_input_time"
                        android:inputType="time" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/set_path_textviews_gap" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/setPathInputPassengers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/set_path_input_passengers"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/set_path_textviews_gap" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/setPathInputCarType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/set_path_input_car_type"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/set_path_layout_gap" />

            <Button
                android:id="@+id/setPathBtnCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_path_call_taxi" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/authorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/authorBtn"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/author"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>